# twitter-sentiment-analysis

./: pyproject.toml
notebooks/: pre-processing.ipynb  twitter-analysis.ipynb
