[project]
name = "twitter-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "keras-preprocessing>=1.1.2",
    "keras>=3.6.0",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "pillow>=11.0.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.17.0",
    "wordcloud>=1.9.3",
]
